php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #44394 Last two bytes missing from output
Submitted: 2008-03-10 16:03 UTC Modified: 2008-03-12 02:46 UTC
From: weirdan at gmail dot com Assigned:
Status: Closed Package: Output Control
PHP Version: 5.2.6RC2 OS: Windows XP
Private report: No CVE-ID: None
 [2008-03-10 16:03 UTC] weirdan at gmail dot com
Description:
------------
It seems like a regression of http://bugs.php.net/bug.php?id=26862 - two last bytes missing from output when using ob_flush() + ob_end_clean(). ob_end_flush() works as expected though.

The same issue is observed on PHP 5.2.3 / Linux

Reproduce code:
---------------
<?php
$string = "<a href='a?q=1'>asd</a>";
output_add_rewrite_var('a', 'b');
echo $string;
ob_flush();
ob_end_clean();

Expected result:
----------------
<a href='a?q=1&a=b'>asd</a>

Actual result:
--------------
<a href='a?q=1&a=b'>asd</

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2008-03-11 22:31 UTC] weirdan at gmail dot com
not fixed on WinXP, tested with this script:
<?php
echo phpversion() . "\n";
$string = "<a href='a?q=1'>asd</a>";
output_add_rewrite_var('a', 'b');
echo $string;
ob_flush();
ob_end_clean();

Results:
C:\Windows\system32\cmd.exe /c .\php.exe q.php | more
5.2.6RC3-dev
<a href='a?q=1&a=b'>asd</
Hit any key to close this window...
 [2008-03-12 02:46 UTC] felipe@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.

Fixed in 5_3 and HEAD.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Thu Sep 24 20:00:02 2026 UTC