Fixed bug #44394 (Last two bytes missing from output)